--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -20,18 +20,21 @@
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
       "dependencies": {
-        "prettier": "^2.8.8"
-      },
-      "peerDependencies": {
+        "@babel/runtime": "7.21.5",
+        "@types/jest": "29.5.1",
+        "@types/node": "20.1.4",
         "@types/postcss-import": "^14.0.0",
         "@types/react": "^18.2.6",
         "autoprefixer": "^10.4.14",
         "cssnano": "^6.0.1",
         "glob": "^10.2.3",
         "postcss-import": "^15.1.0",
+        "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.2.8",
-        "react": "^18.2.0",
         "tailwindcss": "^3.3.2"
+      },
+      "peerDependencies": {
+        "react": "^18.2.0"
       }
     },
     "linkCoreAspects": true
