--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -1,13 +1,13 @@
 /**
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-configuration
- **/{
+ **/ {
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
   /**
    * main configuration of the Bit workspace.
    **/
   "teambit.workspace/workspace": {
-    "defaultScope": "wandezen.tool",
+    "defaultScope": "wandezen.ui",
     "defaultDirectory": "{scope}/{name}"
   },
   /**
@@ -21,20 +21,46 @@
     "policy": {
       "dependencies": {
         "@babel/runtime": "7.21.5",
+        "@chakra-ui/cli": "^2.4.1",
+        "@chakra-ui/react": "^2.6.1",
+        "@chakra-ui/styled-system": "^2.9.0",
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mdx-js/react": "2.3.0",
+        "@teambit/defender.eslint-linter": "^0.0.10",
+        "@teambit/defender.jest-tester": "^0.0.9",
+        "@teambit/defender.prettier-formatter": "^0.0.6",
+        "@teambit/dependencies.modules.packages-excluder": "^0.0.70",
+        "@teambit/mdx.ui.mdx-scope-context": "0.0.498",
+        "@teambit/preview.react-preview": "^0.0.34",
+        "@teambit/react.mounter": "^0.0.10",
+        "@teambit/react.react-env": "^0.0.63",
+        "@teambit/typescript.typescript-compiler": "^0.0.9",
         "@types/jest": "29.5.1",
-        "@types/node": "20.1.4",
+        "@types/node": "20.2.3",
         "@types/postcss-import": "^14.0.0",
+        "@types/prop-types": "^15.7.5",
         "@types/react": "^18.2.6",
+        "@types/react-dom": "^18.2.4",
+        "@types/testing-library__jest-dom": "5.14.5",
         "autoprefixer": "^10.4.14",
+        "core-js": "^3.30.2",
         "cssnano": "^6.0.1",
-        "glob": "^10.2.3",
+        "framer-motion": "^10.12.12",
+        "glob": "^10.2.6",
+        "graphql": "16.6.0",
+        "jest": "29.5.0",
         "postcss-import": "^15.1.0",
         "prettier": "^2.8.8",
-        "prettier-plugin-tailwindcss": "^0.2.8",
+        "prettier-plugin-tailwindcss": "^0.3.0",
+        "prop-types": "^15.8.1",
+        "react-router-dom": "6.11.2",
         "tailwindcss": "^3.3.2"
       },
       "peerDependencies": {
-        "react": "^18.2.0"
+        "@testing-library/react": "^14.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
       }
     },
     "linkCoreAspects": true
@@ -47,14 +73,8 @@
    * see https://bit.dev/docs/workspace/variants for more info.
    **/
   "teambit.workspace/variants": {
-    /**
-     * "*" is a special rule which applied on all components in the workspace.
-     **/
-    "*": {
-      /**
-       * uncomment to apply the chosen environment on all components.
-       **/
-      // "teambit.react/react": { }
-    }
+    // "{theme}": {
+    //   "wandezen.ui/envs/react-chakra-env": {}
+    // }
   }
 }
