--- a/package.json
+++ b/package.json
@@ -3,5 +3,16 @@
     "gen:theme": "chakra-cli tokens design/chakra/theme.ts",
     "gen:theme:watch": "chakra-cli tokens design/chakra/theme.ts --watch",
     "start": "npx bit start && gen:theme:watch"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4"
+  },
+  "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.12.16"
   }
 }
