--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -1,14 +1,33 @@
 /**
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-configuration
- **/{
+ **/ {
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
   /**
    * main configuration of the Bit workspace.
    **/
   "teambit.workspace/workspace": {
-    "defaultScope": "wandezen.design",
-    "defaultDirectory": "{scope}/{name}"
+    /**
+     * the name of the component workspace. used for development purposes.
+     **/
+    "name": "wandezen",
+    /**
+     * set the icon to be shown on the Bit server.
+     **/
+    "icon": "https://static.bit.dev/bit-logo.svg",
+    /**
+     * default directory to place a component during `bit import` and `bit create`.
+     * the following placeholders are available:
+     * name - component name includes namespace, e.g. 'ui/button'.
+     * scopeId - full scope-id includes the owner, e.g. 'teambit.compilation'.
+     * scope - scope name only, e.g. 'compilation'.
+     * owner - owner name in bit.dev, e.g. 'teambit'.
+     **/
+    "defaultDirectory": "{scope}/{name}",
+    /**
+     * default scope for all components in workspace.
+     **/
+    "defaultScope": "wandezen.design"
   },
   /**
    * main configuration for component dependency resolution.
@@ -17,50 +36,23 @@
     /**
      * choose the package manager for Bit to use. you can choose between 'yarn', 'pnpm'
      */
-    "packageManager": "teambit.dependencies/pnpm",
+    "packageManager": "teambit.dependencies/yarn",
     "policy": {
       "dependencies": {
-        "@babel/runtime": "7.21.5",
         "@chakra-ui/cli": "^2.4.1",
         "@chakra-ui/react": "^2.6.1",
         "@chakra-ui/styled-system": "^2.9.0",
         "@emotion/react": "^11.11.0",
         "@emotion/styled": "^11.11.0",
-        "@mdx-js/react": "2.3.0",
-        "@teambit/defender.eslint-linter": "^0.0.10",
-        "@teambit/defender.jest-tester": "^0.0.9",
-        "@teambit/defender.prettier-formatter": "^0.0.6",
-        "@teambit/dependencies.modules.packages-excluder": "^0.0.70",
-        "@teambit/mdx.ui.mdx-scope-context": "0.0.498",
-        "@teambit/preview.react-preview": "^0.0.34",
-        "@teambit/react.mounter": "^0.0.10",
-        "@teambit/react.react-env": "^0.0.63",
-        "@teambit/typescript.typescript-compiler": "^0.0.9",
-        "@types/jest": "29.5.1",
-        "@types/node": "20.2.3",
-        "@types/postcss-import": "^14.0.0",
-        "@types/prop-types": "^15.7.5",
-        "@types/react": "^18.2.6",
-        "@types/react-dom": "^18.2.4",
-        "@types/testing-library__jest-dom": "5.14.5",
-        "autoprefixer": "^10.4.14",
+        "@teambit/react.react-env": "^0.0.65",
         "core-js": "^3.30.2",
-        "cssnano": "^6.0.1",
-        "framer-motion": "^10.12.12",
-        "glob": "^10.2.6",
-        "graphql": "16.6.0",
-        "jest": "29.5.0",
-        "postcss-import": "^15.1.0",
-        "prettier": "^2.8.8",
-        "prettier-plugin-tailwindcss": "^0.3.0",
-        "prop-types": "^15.8.1",
-        "react-router-dom": "6.11.2",
-        "tailwindcss": "^3.3.2"
+        "framer-motion": "^10.12.16"
       },
       "peerDependencies": {
         "@testing-library/react": "^14.0.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "typescript": "^5.0.4"
       }
     },
     "linkCoreAspects": true
